syntax = "proto3";

package hogwild;

// Worker Service for the synchronous version
service WorkerServiceSync {
    rpc UpdateWeights (stream WorkerRequest) returns (stream WorkerResponse) {
    }
}

message WorkerRequest {
    map<uint32, double> gradient = 2;
}

message WorkerResponse {
    uint32 did = 1;
    map<uint32, double> weights = 2;
}

// Worker Service for the asynchronous version
service WorkerServiceAsync {
    rpc Identification (InformationRequest) returns (InformationResponse) {}
    rpc Ready(WorkerAddress) returns (WorkersDetails) {}
    rpc UpdateWeights (stream WorkerBroadcast) returns (stream WorkerBroadcast) {}
}

message Empty {}

message WorkersDetails {
    repeated WorkerAddress workerAdresses = 1;
}

message WorkerAddress {
    string address = 1;
    uint32 port = 2;
}

message InformationRequest {
    string address = 1;
}

message InformationResponse {
    uint32 port = 1;
}


message WorkerBroadcast {
    map<uint32, double> weightsUpdate = 1;
    uint32 workerId = 2;
}